<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_degrade"
    tools:context=".presentation.login.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/text_register"
        android:textAlignment="center"
        android:textColor="@color/white_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="4dp"
        android:text="@string/text_insert_name"
        android:textColor="#99FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextInsertName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextInsertName" />

    <EditText
        android:id="@+id/editTextInsertName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/background_edt"
        android:padding="12dp"
        android:textColor="#99FFFFFF"
        android:textAlignment="center"
        android:textColorHint="@color/white_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="lieberson.santos@up.com.br" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/insert_password"
        android:textColor="#99FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextInsertPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextInsertPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextInsertPassword" />

    <EditText
        android:id="@+id/editTextInsertPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_edt"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="#99FFFFFF"
        android:textColorHint="@color/white_color"
        app:layout_constraintEnd_toEndOf="@+id/editTextInsertName"
        app:layout_constraintStart_toStartOf="@+id/editTextInsertName"
        app:layout_constraintTop_toBottomOf="@+id/editTextInsertName" />

    <Button
        android:id="@+id/buttonInsert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/text_ok"
        android:textColor="#99FFFFFF"
        android:background="@drawable/background_button"
        app:layout_constraintEnd_toEndOf="@+id/editTextInsertPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextInsertPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextInsertPassword" />



</androidx.constraintlayout.widget.ConstraintLayout>